add font to body

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ body {
 	line-height: 19px;
 	color: #242424;
 	width: 100%;
-	font-family: 'Manrope', arial, sans-serif;
+	font-family: 'Poppins', arial, sans-serif;
 }
 
 .container {
