--- a/style.css
+++ b/style.css
@@ -150,3 +150,9 @@ section {
 	width: 230px;
 	flex-wrap: nowrap;
 }
+.header_btn{
+	border-radius: 8px;
+	border: 1px solid #E6E6E6;
+	width: 106px;
+	height: 41px;
+}
