--- a/style.css
+++ b/style.css
@@ -225,3 +225,15 @@ section {
 	letter-spacing: -0.51%;
 	/* text-align: left; */
 }
+
+.slaider_one__img{
+/* Frame 114 */
+position: relative;
+width: 48px;
+height: 48px;
+box-sizing: border-box;
+/* Foundation /Green/Light :active */
+border: 1px solid rgb(176, 228, 221);
+border-radius: 24px;
+
+}
