--- a/style.css
+++ b/style.css
@@ -226,6 +226,12 @@ section {
 	/* text-align: left; */
 }
 
+.slaider {
+	display: flex;
+	gap: 26px;
+	margin: 28px 3px;
+}
+
 .slaider_one__img {
 	/* Frame 114 */
 	position: relative;
@@ -242,9 +248,20 @@ section {
 	position: relative;
 	width: 48px;
 	height: 48px;
-	transform: rotate(180.00deg);
+	transform: rotate(0deg);
 	border-radius: 24px;
-
 	/* Foundation/Green/Dark */
 	background: rgb(0, 127, 109);
+}
+
+.vectror{
+	width: 26px;
+	margin-top: 8px;
+	margin-left: 9px;
+}
+
+.vectror_two{
+	width: 26px;
+	margin-top: 9px;
+	margin-left: 12.5px;
 }
