--- a/style.css
+++ b/style.css
@@ -233,35 +233,47 @@ section {
 }
 
 .slaider_one__img {
-	/* Frame 114 */
 	position: relative;
 	width: 48px;
 	height: 48px;
 	box-sizing: border-box;
-	/* Foundation /Green/Light :active */
 	border: 1px solid rgb(176, 228, 221);
 	border-radius: 24px;
 }
 
 .slaider_two__img {
-	/* Frame 115 */
 	position: relative;
 	width: 48px;
 	height: 48px;
-	transform: rotate(0deg);
 	border-radius: 24px;
-	/* Foundation/Green/Dark */
 	background: rgb(0, 127, 109);
 }
 
-.vectror{
+.vectror {
 	width: 26px;
 	margin-top: 8px;
 	margin-left: 9px;
 }
 
-.vectror_two{
+.vectror_two {
 	width: 26px;
 	margin-top: 9px;
 	margin-left: 12.5px;
+}
+
+.white_box {
+	width: 553px;
+	height: 206px;
+	left: 740px;
+	right: 147px;
+	top: 236px;
+	bottom: 218px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: flex-start;
+	padding: 24px;
+	border-radius: 10px;
+	box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.25);
+	background: rgb(255, 255, 255);
 }
