--- a/style.css
+++ b/style.css
@@ -277,3 +277,24 @@ section {
 	box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.25);
 	background: rgb(255, 255, 255);
 }
+
+.span_box{
+position: static;
+width: 510px;
+height: 96px;
+display: flex;
+flex-direction: column;
+justify-content: flex-end;
+align-items: flex-start;
+padding: 24px;
+flex: none;
+order: 0;
+flex-grow: 0;
+margin: 0px 24px;
+color: rgb(61, 61, 72);
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+letter-spacing: -1%;
+text-align: left;
+}
