--- a/style.css
+++ b/style.css
@@ -311,3 +311,25 @@ section {
 	margin: 0px 24px;
 	border-radius: 32px;
 }
+
+.sp_man {
+	/* position: static; */
+	/* width: 180px; */
+	height: 24px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	/* align-items: flex-start; */
+	padding: 24px;
+	flex: none;
+	order: 2;
+	/* flex-grow: 0; */
+	margin: 0px 24px;
+	color: rgb(11, 11, 14);
+	/* font-family: Vazirmatn; */
+	font-size: 18px;
+	font-weight: 600;
+	line-height: 24px;
+	letter-spacing: -0.37%;
+	/* text-align: left; */
+}
