--- a/style.css
+++ b/style.css
@@ -182,3 +182,12 @@ section {
 	text-align: right;
 	color: #008774;
 }
+
+.child_txt {
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 25px;
+	letter-spacing: 0em;
+	color: #E6F6F4;
+	max-width: 490px;
+}
