--- a/style.css
+++ b/style.css
@@ -172,6 +172,18 @@ section {
 	height: 100%;
 }
 
+.children_main {
+	align-items: flex-end;
+}
+
+.children_left {
+	width: 65%;
+}
+
+.children_right {
+	width: 35%;
+}
+
 .child_sec {
 	margin-top: 55px;
 	margin-bottom: 32px;
@@ -190,4 +202,12 @@ section {
 	letter-spacing: 0em;
 	color: #E6F6F4;
 	max-width: 490px;
+	margin-bottom: 32px;
+}
+
+.children_btn {
+	width: 300px;
+	height: 51px;
+	background: #008774;
+	color: #fff;
 }
