--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ section {
 
 
 /* amal */
-.oneFooter{
+.oneFooter {
 	height: 810px;
 	background-image: url(.//img/svg/footerOneSvg.svg);
 	background-position: 60% 0;
@@ -359,7 +359,7 @@ section {
 }
 
 /* footer */
-.footer{
+.footer {
 	height: 810px;
 	background-image: url(.//img/svg/footer.svg);
 	background-position: 60% 0;
@@ -371,16 +371,35 @@ section {
 	display: flex;
 }
 
-.apps{
-width: 176px;
-height: 48px;
-display: flex;
-flex-direction: row;
-justify-content: flex-start;
-align-items: flex-start;
-padding: 0px;
-flex: none;
-order: 1;
-flex-grow: 0;
-margin: 56px 0px;
+.apps {
+	width: 176px;
+	height: 48px;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: flex-start;
+	padding: 0px;
+	flex: none;
+	order: 1;
+	flex-grow: 0;
+	margin: 56px 0px;
+}
+
+.app {
+	position: static;
+	height: 48px;
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
+	align-items: flex-start;
+	padding: 12px;
+	flex: none;
+	order: 0;
+	flex-grow: 0;
+	margin: 0px 16px;
+	border-radius: 24px;
+}
+
+.footer_card{
+	
 }
