--- a/style.css
+++ b/style.css
@@ -400,16 +400,32 @@ section {
 	border-radius: 24px;
 }
 
-.footer_card{
-width: 1120px;
-height: 280px;
-left: 160px;
-right: 160px;
-top: 96px;
-bottom: 85px;
-display: flex;
-flex-direction: column;
-justify-content: flex-start;
-align-items: center;
-padding: 0px;
+.footer_card {
+	width: 1120px;
+	height: 280px;
+	left: 160px;
+	right: 160px;
+	top: 96px;
+	bottom: 85px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 0px;
+}
+
+.footer_box {
+	position: static;
+	width: 544px;
+	height: 120px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: center;
+	padding: 0px;
+	flex: none;
+	order: 0;
+	flex-grow: 0;
+	margin: 56px 0px;
+	color: white;
 }
