--- a/style.css
+++ b/style.css
@@ -555,3 +555,11 @@ section {
 	background: #E6F6F4;
 	background-image: url("img/Shape.png") no-repeat;
 	}
+.adress_icon_block{
+	width: 96px;
+	height: 96px;
+   margin-top: 48px;
+	margin-left: 48px;
+	background: #FFFFFF;
+	border-radius: 100%;
+  }
