--- a/style.css
+++ b/style.css
@@ -563,3 +563,13 @@ section {
 	background: #FFFFFF;
 	border-radius: 100%;
   }
+  .adress_name{
+	font-family: Manrope;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 32px;
+	letter-spacing: 0px;
+	text-align: left;
+	color: #3A170080;
+	margin-top: 58px;
+	}
