--- a/style.css
+++ b/style.css
@@ -587,4 +587,12 @@ section {
 			flex-direction: column;
 			margin-left: 48px;
 		  }
-		  
+		  .find_title{
+			font-family: Vazirmatn;
+			font-size: 60px;
+			font-weight: 100;
+			line-height: 94px;
+			letter-spacing: 0em;
+			text-align: center;
+			margin-top: 400px;
+			}
