--- a/style.css
+++ b/style.css
@@ -601,3 +601,9 @@ section {
 				text-align: center;
 				gap: 50px;
 			  }
+			  .find_tab {
+				padding: 10px 20px;
+				cursor: pointer;
+				border-bottom: 3px solid transparent;
+				transition: border-bottom-color 0.4s ease;
+			  }
