--- a/style.css
+++ b/style.css
@@ -140,17 +140,17 @@ section {
 
 /* header */
 
-.header_main  {
+.header_main {
 	margin-top: 32px;
 }
 
 
-.header_list  {
+.header_list {
 	width: 497px;
 }
 
 
-.header_btns  {
+.header_btns {
 	width: 270px;
 	flex-wrap: nowrap;
 }
@@ -170,8 +170,15 @@ section {
 /* children */
 
 .children {
-	background: url(./img/Desktop\ -\ 2.jpg)center no-repeat;
-	height: 100%;
+	height: 810px;
+	background-image: url(.//img/photo_2024-03-15_15-04-12.jpg);
+	background-position: 60% 0;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	align-items: center;
+	padding-bottom: 120px;
+	display: flex;
 }
 
 .children_main {
@@ -179,11 +186,11 @@ section {
 }
 
 .children_left {
-	width: 65%;
+	width: 50%;
 }
 
 .children_right {
-	width: 35%;
+	width: 50%;
 }
 
 .child_sec {
@@ -538,20 +545,22 @@ section {
 
 
 /* Ramazan  */
-.Find_section{
+.Find_section {
 	width: 1266px;
 	height: 1791px;
 	margin-left: auto;
 	margin-right: auto;
-	}
-	.adress_blocks{
+}
+
+.adress_blocks {
 	display: flex;
 	flex-direction: row;
-	  }
-.adress_block{
+}
+
+.adress_block {
 	width: 480px;
 	height: 192px;
 	display: flex;
 	background: #E6F6F4;
 	background-image: url("img/Shape.png") no-repeat;
-	}
+}
