--- a/style.css
+++ b/style.css
@@ -540,30 +540,92 @@ section {
 /* Ramazan  */
 .Find_section{
 	width: 1266px;
-	height: 1791px;
+	height: 2000px;
 	margin-left: auto;
 	margin-right: auto;
 	}
-	.adress_blocks{
+	.find_title{
+	font-family: Vazirmatn;
+	font-size: 60px;
+	font-weight: 100;
+	line-height: 94px;
+	letter-spacing: 0em;
+	text-align: center;
+	margin-top: 100px;
+	}
+	
+	/* Tabs */
+	.find_tabs {
+	  display: flex;
+	  text-align: center;
+	  gap: 50px;
+	}
+	
+	.find_tab {
+	  padding: 10px 20px;
+	  cursor: pointer;
+	  border-bottom: 3px solid transparent;
+	  transition: border-bottom-color 0.4s ease;
+	}
+	
+	.find_tab:hover {
+	  border-bottom-color: #007bff;
+	}
+	
+	.find_tab.active {
+	  border-bottom-color: #007bff;
+	}
+	
+	.find_tab-content {
+	  display: none;
+	}
+	
+	.find_tab-content.active {
+	  display: block;
+	}
+	.find_tabs_block{
+	width: 900px;
 	display: flex;
-	flex-direction: row;
-	  }
-.adress_block{
+	align-items: center;
+	font-family: Vazirmatn;
+	font-size: 25px;
+	font-weight: 400;
+	line-height: 28px;
+	letter-spacing: 0.04em;
+	justify-content: center;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 70px;
+	}
+	.find_tab_img_1{
+	  margin-top: 70px;
+	}
+	
+	
+	
+	
+	
+	.adress_blocks{
+	  display: flex;
+	  flex-direction: row;
+	}
+	.adress_block{
 	width: 480px;
 	height: 192px;
 	display: flex;
 	background: #E6F6F4;
 	background-image: url("img/Shape.png") no-repeat;
 	}
-.adress_icon_block{
-	width: 96px;
-	height: 96px;
-   margin-top: 48px;
-	margin-left: 48px;
-	background: #FFFFFF;
-	border-radius: 100%;
-  }
-  .adress_name{
+	.adress_icon_block{
+	  width: 96px;
+	  height: 96px;
+	 margin-top: 48px;
+	  margin-left: 48px;
+	  background: #FFFFFF;
+	  border-radius: 100%;
+	}
+	
+	.adress_name{
 	font-family: Manrope;
 	font-size: 16px;
 	font-weight: 400;
@@ -574,68 +636,17 @@ section {
 	margin-top: 58px;
 	}
 	.adress_tel{
-		font-family: Manrope;
-		font-size: 20px;
-		font-weight: 400;
-		line-height: 32px;
-		letter-spacing: 0px;
-		text-align: left;
-		color: #3A1700;
-		}
-		.adress_block_flex{
-			display: flex;
-			flex-direction: column;
-			margin-left: 48px;
-		  }
-		  .find_title{
-			font-family: Vazirmatn;
-			font-size: 60px;
-			font-weight: 100;
-			line-height: 94px;
-			letter-spacing: 0em;
-			text-align: center;
-			margin-top: 400px;
-			}
-			.find_tabs {
-				display: flex;
-				text-align: center;
-				gap: 50px;
-			  }
-			  .find_tab {
-				padding: 10px 20px;
-				cursor: pointer;
-				border-bottom: 3px solid transparent;
-				transition: border-bottom-color 0.4s ease;
-			  }
-			  .find_tabs_block{
-				width: 900px;
-				display: flex;
-				align-items: center;
-				font-family: Vazirmatn;
-				font-size: 25px;
-				font-weight: 400;
-				line-height: 28px;
-				letter-spacing: 0.04em;
-				justify-content: center;
-				margin-left: auto;
-				margin-right: auto;
-				margin-top: 70px;
-				}
-				.find_tab_img_1{
-					margin-top: 70px;
-				  }
-				  .find_tab:hover {
-					border-bottom-color: #007bff;
-				  }
-				  
-				  .find_tab.active {
-					border-bottom-color: #007bff;
-				  }
-				  
-				  .find_tab-content {
-					display: none;
-				  }
-				  
-				  .find_tab-content.active {
-					display: block;
-				  }
+	font-family: Manrope;
+	font-size: 20px;
+	font-weight: 400;
+	line-height: 32px;
+	letter-spacing: 0px;
+	text-align: left;
+	color: #3A1700;
+	}
+	.adress_block_flex{
+	  display: flex;
+	  flex-direction: column;
+	  margin-left: 48px;
+	}
+	
