--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ section {
 
 .children {
 	height: 810px;
-	background-image: url(.//img/photo_2024-03-15_15-04-12.jpg);
+	background-image: url(.//img/children_img.jpg);
 	background-position: 60% 0;
 	background-repeat: no-repeat;
 	background-size: cover;
