--- a/style.css
+++ b/style.css
@@ -591,22 +591,22 @@ section {
 }
 
 .find_tabs_block {
-	width: 900px;
-	display: flex;
-	align-items: center;
-	font-family: Vazirmatn;
-	font-size: 25px;
-	font-weight: 400;
-	line-height: 28px;
-	letter-spacing: 0.04em;
-	justify-content: center;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 70px;
+width: 900px;
+display: flex;
+align-items: center;
+font-family: Vazirmatn;
+font-size: 25px;
+font-weight: 400;
+line-height: 28px;
+letter-spacing: 0.04em;
+justify-content: center;
+margin-left: auto;
+margin-right: auto;
+margin-top: 70px;
 }
 
 .find_tab_img_1 {
-	margin-top: 70px;
+margin-top: 70px;
 }
 
 
@@ -614,44 +614,52 @@ section {
 
 
 .adress_blocks {
-	display: flex;
-	flex-direction: row;
+display: flex;
+flex-direction: row;
 }
 
 .adress_blocks {
-	display: flex;
-	flex-direction: row;
+display: flex;
+flex-direction: row;
 }
+.adress_icon_block{
+width: 96px;
+height: 96px;
+margin-top: 48px;
+margin-left: 48px;
+background: #FFFFFF;
+border-radius: 100%;
+  }
 
 .adress_block {
-	width: 480px;
-	height: 192px;
-	display: flex;
-	background: #E6F6F4;
-	background-image: url("img/Shape.png") no-repeat;
-	background-image: url("img/Shape.png") no-repeat;
+width: 480px;
+height: 192px;
+display: flex;
+background: #E6F6F4;
+background-image: url("img/Shape.png") no-repeat;
+background-image: url("img/Shape.png") no-repeat;
 }
 .adress_name{
-	font-family: Manrope;
-	font-size: 16px;
-	font-weight: 400;
-	line-height: 32px;
-	letter-spacing: 0px;
-	text-align: left;
-	color: #3A170080;
-	margin-top: 58px;
-	}
-	.adress_tel{
-		font-family: Manrope;
-		font-size: 20px;
-		font-weight: 400;
-		line-height: 32px;
-		letter-spacing: 0px;
-		text-align: left;
-		color: #3A1700;
-		}
-		.adress_block_flex{
-			display: flex;
-			flex-direction: column;
-			margin-left: 48px;
-		  }
+font-family: Manrope;
+font-size: 16px;
+font-weight: 400;
+line-height: 32px;
+letter-spacing: 0px;
+text-align: left;
+color: #3A170080;
+margin-top: 58px;
+}
+.adress_tel{
+font-family: Manrope;
+font-size: 20px;
+font-weight: 400;
+line-height: 32px;
+letter-spacing: 0px;
+text-align: left;
+color: #3A1700;
+}
+.adress_block_flex{
+display: flex;
+flex-direction: column;
+margin-left: 20px;
+}
