added animation tabs imgs

--- a/style.css
+++ b/style.css
@@ -663,6 +663,17 @@ display: flex;
 flex-direction: column;
 margin-left: 20px;
 }
+.find_tabs_page1{
+	width: 1140px;
+	margin-top: 50px;
+	border-style: solid;
+	border-color: #FFFFFF;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	display: grid;
+	grid-template-areas: "b b a" "b b c" "b b c"
+	}
 .find_tabs_video-1{
 	height: 270px;
 	}
@@ -694,5 +705,12 @@ margin-left: 20px;
 	/* width: 560px; */
 	height: 100%;
 	}
+
+.find_tab_img {
+transition: 1s; /* Время эффекта */
+}
+.find_tab_img:hover {
+transform: scale(0.9); /* Увеличиваем масштаб */
+}
 	
 
