--- a/amal/animation.css
+++ b/amal/animation.css
@@ -9,6 +9,8 @@
 
 
 body {
+  font-family: 'Tomorrow', sans-serif;  
+
   width: 100%;
   height: 100vh;
   /* display: flex; */
@@ -336,15 +338,19 @@ nav ul li a:before, nav ul li:before, nav ul li:after {
   height: 33.33%;
   width: 0;
   background: #00A991;
-  ;
   transition: .4s ease;
 }
 
 nav ul {
   list-style-type: none;
   padding: 0;
+  
   display: flex;
   justify-content: space-around;
+}
+
+li:hover{
+  color: white;
 }
 
 nav ul li {
@@ -358,7 +364,7 @@ nav ul li {
 }
 
 nav ul li a {
-  font-family: 'Tomorrow', sans-serif;
+  font-family: 'Tomorrow', sans-serif;  
   text-transform: uppercase;
   letter-spacing: 3px;
   text-decoration: none;
