--- a/amal/animation.css
+++ b/amal/animation.css
@@ -37,7 +37,7 @@ button:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 27px;
+  margin-top: 8 3px;
 }
 .app__bg {
   position: absolute;
