--- a/style.css
+++ b/style.css
@@ -147,27 +147,44 @@ section {
 
 /* header */
 
-.header_main {
-	margin-top: 32px;
 
+
+.header_main {
+	/* margin-top: -62px; */
+	position: fixed;
+	background: linear-gradient(224.64deg, rgba(255, 255, 255, 0) 13.642%, rgb(255, 255, 255) 51.5%, rgba(255, 255, 255, 0) 93.165%);
+	z-index: 3;
+	width: 100%;
+	height: 74px;
+	transition: transform .1s linear;
+
+	left: 0;
+	top: 0;
 }
 
-/* .header{
-	background: linear-gradient(224.64deg, rgba(255, 255, 255, 0) 13.642%, rgb(255, 255, 255) 51.5%, rgba(255, 255, 255, 0) 93.165%);
+.header.hide{
+	transform: translateY(-50px);
+}
+
+/* 
+.header{
+	width: 100%;
 } */
 
-
-
 .header_list {
-	width: 643px;
+	width: 762px;
+	margin-top: 12px;
 }
 
+
+.header_logo {
+	margin-top: 20px;
+}
 
 .header_btns {
 	width: 270px;
 	flex-wrap: nowrap;
-	margin-top: -6px;
-
+	margin-top: 13px;
 }
 
 .header_btn {
