--- a/style.css
+++ b/style.css
@@ -781,6 +781,19 @@ section {
 		letter-spacing: -0.18000000715255737px;
 		text-align: center;
 		}
+		.donate_img-1{
+			width: 928px;
+			height: 537.1px;
+			top: 480px;
+			left: 256px;
+			gap: 0px;
+			border-radius: 24px 24px 24px 24px;
+			border: 12px 0px 0px 0px;
+			opacity: 0px;
+			margin-left: auto;
+			margin-right: auto;
+			margin-top: 100px;
+			}
 
 /* links */
 .container .links {
