--- a/style.css
+++ b/style.css
@@ -719,6 +719,12 @@ section {
 	/* display: grid; */
 	/* grid-template-areas: "b b a" "b b c" "b b c" */
 }
+.find_tabs_video-2{
+	margin-top: 50px;
+}
+.find_tabs_video-3{
+	margin-top: 50px;
+}
 .find_tabs_page1 > *{
 	width: 33.3%;
 	object-fit: cover;
