--- a/amal/animation.css
+++ b/amal/animation.css
@@ -159,7 +159,7 @@ button:focus {
   top: 0;
   width: 100%;
   height: 100%;
-  background: #000;
+  /* background: #000; */
   z-index: 1;
   transition: opacity var(--card-transition-duration) var(--card-transition-easing);
   opacity: calc(1 - var(--opacity));
