--- a/donate.css
+++ b/donate.css
@@ -111,7 +111,7 @@ html {
   font-weight: 300;
 }
 
-/* .card::before {
+.card::before {
   content: "";
   position: absolute;
   left: 0;
@@ -121,7 +121,7 @@ html {
   z-index: 1;
   transition: opacity var(--card-transition-duration) var(--card-transition-easing);
   opacity: calc(1 - var(--opacity));
-} */
+}
 
 .card__name p {
   font-size: 1.4rem;
@@ -214,7 +214,7 @@ html {
   height: 3.8rem;
   border-radius: 0.6rem;
   border: none;
-  background: var(--primary);
+  /* background: var(--primary); */
   color: #ffffff;
   justify-self: stretch;
   font-family: inherit;
